@@ -1,9 +1,9 @@
 Obsoletes: pupmod-sssd-test >= 0.0.1
 Requires: pupmod-simp-auditd < 6.0.0-0
-Requires: pupmod-simp-auditd >= 5.1.0-0
+Requires: pupmod-simp-auditd >= 5.1.1-0
 Requires: pupmod-simp-compliance_markup < 2.0.0-0
-Requires: pupmod-simp-compliance_markup >= 1.0.1-0
-Requires: pupmod-simp-simpcat < 6.0.0-0
-Requires: pupmod-simp-simpcat >= 5.0.1-0
-Requires: pupmod-simp-simplib < 2.0.0-0
-Requires: pupmod-simp-simplib >= 1.3.1-0
+Requires: pupmod-simp-compliance_markup >= 1.0.2-0
+Requires: pupmod-simp-simpcat < 7.0.0-0
+Requires: pupmod-simp-simpcat >= 6.0.0-0
+Requires: pupmod-simp-simplib < 3.0.0-0
+Requires: pupmod-simp-simplib >= 2.0.0-0
