@@ -31,7 +31,7 @@ define sssd::provider::local (
   unless empty($debug_timestamps) { validate_bool($debug_timestamps) }
   unless empty($debug_microseconds) { validate_bool($debug_microseconds) }
 
-  concat_fragment { "sssd+${name}#local_provider.domain":
+  simpcat_fragment { "sssd+${name}#local_provider.domain":
     content => template('sssd/provider/local.erb')
   }
 }
