@@ -1,6 +1,6 @@
 {
   "name": "simp-sssd",
-  "version": "4.1.4",
+  "version": "5.0.0",
   "author": "simp",
   "summary": "Manages SSSD",
   "license": "Apache-2.0",
@@ -14,19 +14,19 @@
   "dependencies": [
     {
       "name": "simp/auditd",
-      "version_requirement": ">= 5.1.0 < 6.0.0"
+      "version_requirement": ">= 5.1.1 < 6.0.0"
     },
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 5.0.1 < 6.0.0"
+      "version_requirement": ">= 6.0.0 < 7.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 1.3.1 < 2.0.0"
+      "version_requirement": ">= 2.0.0 < 3.0.0"
     },
     {
       "name": "simp/compliance_markup",
-      "version_requirement": ">= 1.0.1 < 2.0.0"
+      "version_requirement": ">= 1.0.2 < 2.0.0"
     }
   ],
   "operatingsystem_support": [
