@@ -13,7 +13,7 @@ describe 'sssd::provider::krb5' do
         }}
 
         it { is_expected.to compile.with_all_deps }
-        it { is_expected.to create_concat_fragment('sssd+krb5_test_domain#krb5_provider.domain').without_content(%r(=\s*$)) }
+        it { is_expected.to create_simpcat_fragment('sssd+krb5_test_domain#krb5_provider.domain').without_content(%r(=\s*$)) }
       end
     end
   end
